:bug: fix: Background Image not showing on deploy

--- a/src/styles.css
+++ b/src/styles.css
@@ -14,7 +14,7 @@ html {
 }
 
 body {
-  background-image: url(./assets/background.jpg);
+  background-image: url(../background.jpg);
   background-position: top center;
   background-size: 100% auto;
   background-repeat: no-repeat;
